--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
     <solid android:color="@android:color/transparent" />
-    <stroke android:color="@color/dark_bleu" android:width="2dp"/>
+    <stroke android:color="@color/green" android:width="2dp"/>
     <size android:width="60dp" android:height="60dp"/>
 </shape>
