--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,9 +30,11 @@
                 android:textSize="11sp"
                 android:textColor="@color/black"/>
             <LinearLayout
+                android:id="@+id/rewards"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:focusable="auto">
 
                 <TextView
                     android:id="@+id/rewardsPointsTV"
