--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -8,17 +8,12 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:contentDescription="@string/logo"
-        android:src="@drawable/logo" />
-
-    <TextView
-        android:id="@+id/tv_app_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textColor="@color/black"
-        android:textSize="16sp" />
+        android:layout_height="80dp"
+        android:maxWidth="350dp"
+        android:contentDescription="@string/logo"
+        android:src="@drawable/logo_full"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"/>
 
 </LinearLayout>
